scripts/nullaway/annotator/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8.txt
../annotator/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/Action.java:35: error: [NullAway] passing @Nullable parameter 'last' where @NonNull is required
				paths.addAll(a.getPath(last));
				                       ^
    (see http://t.uber.com/nullaway )
../annotator/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/meta/WaveEnemy.java:43: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return Paths;
		^
    (see http://t.uber.com/nullaway )
2 errors
